Fix alignement in navbar title (IE11)

--- a/src/styles/_navigationbar.scss
+++ b/src/styles/_navigationbar.scss
@@ -94,6 +94,7 @@
     height: 3.438em;
     padding: 0 1.125em 0 1.125em;
     text-decoration: none solid rgb(76, 68, 82);
+    align-items: center;
     p {
         color: $base-color;
         background-color: transparent;
